Changed the rulevisualizer to use QDir instead of native api some wchar fixes and removed som old moc files from the project

--- a/client/resources/settings.ui
+++ b/client/resources/settings.ui
@@ -27,7 +27,7 @@
      </property>
      <widget class="QWidget" name="tabBranches">
       <attribute name="title">
-       <string>Brances</string>
+       <string>Branches</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
